--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "commonjs",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js",
-        "build": "nexe index.js -t windows-x64-10.0.0 --verbose -r ./node_modules/**/* -r package.json",
-        "pkg": "pkg index.js -t node16-win-x64 "
+        "build": "tsc",
+        "start": "node ./dist/app.js",
+        "clean": "rm -rf dist",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "chalk": "2.4",
-        "discord.js": "^13.8.1",
-        "ffmpeg-static": "^5.0.0",
-        "inquirer": "^8.2.4",
-        "nanospinner": "^1.1.0",
-        "play-dl": "^1.9.5",
-        "yt-search": "^2.10.3",
-        "ytdl-core": "^4.11.0"
+        "@types/fluent-ffmpeg": "^2.1.21",
+        "ansi-colors": "^4.1.3",
+        "cli-progress": "^3.12.0",
+        "commander": "^10.0.1",
+        "ffmpeg": "^0.0.4",
+        "ffmpeg-static": "^5.1.0",
+        "fluent-ffmpeg": "^2.1.2",
+        "ytdl-core": "^4.11.4",
+        "ytpl": "^2.3.0"
+    },
+    "devDependencies": {
+        "@types/cli-progress": "^3.11.0",
+        "@types/ffmpeg": "^1.0.4",
+        "@types/node": "^18.16.0"
     }
 }
